# atlas-gic

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
artifacts/strategy_memory/: rejected_families.jsonl
configs/: base.yaml
src/: README.md
src/atlas/: __init__.py  cli.py
src/atlas/backtest/: __init__.py  costs.py  engine.py  portfolio.py
src/atlas/common/: __init__.py  artifacts.py  config.py  models.py
src/atlas/data/: binance.py  loaders.py
src/atlas/evaluation/: composite_score.py  metrics.py
src/atlas/research/: __init__.py  candidate_strategies.py  experiment_runner.py  llm_mutator.py  promotion.py
src/atlas/strategies/: __init__.py  base.py  btc_mean_reversion_tight_v1.py  btc_mean_reversion_v1.py
src/atlas_admin/: __main__.py  app.py  job_registry.py  models.py  services.py
src/atlas_admin/static/: styles.css
src/atlas_admin/templates/: index.html  layout.html  run_detail.html  runs.html
src/atlas_admin/templates/partials/: active_sessions.html  heartbeat.html  log_preview.html  status_badge.html
tests/: conftest.py  test_admin_dashboard.py  test_backtest_integration.py  test_binance_archive.py  test_binance_data.py  test_cli.py  test_llm_mutator.py  test_loaders.py  test_metrics.py  test_research_runner.py  test_strategy_contract.py
